Report index query date init
