# storage/api-docs/api-docs.json
@@ -815,6 +815,33 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "commerce_id",
+                        "in": "query",
+                        "description": "Report commerce_id",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "year",
+                        "in": "query",
+                        "description": "Report year",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "month",
+                        "in": "query",
+                        "description": "Report month",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
                 ],
                 "responses": {
